<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home_titulo"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nome"
        android:id="@+id/txtNome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nome"
        android:ems="10"
        android:id="@+id/edNome_confirm"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/txtNome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/idade"
        android:id="@+id/txtIdade"
        android:layout_below="@+id/txtNome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/edIdade_confirm"
        android:inputType="number"
        android:hint="@string/idade"
        android:layout_alignBottom="@+id/txtIdade"
        android:layout_alignStart="@+id/edNome_confirm" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose_modalidade"
        android:id="@+id/txtModalidade"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/txtIdade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnModalidade"
        android:prompt="@string/choose_modalidade"
        android:entries="@array/array_modality"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/txtModalidade"
        android:layout_toEndOf="@+id/txtModalidade"
        android:layout_toRightOf="@+id/txtModalidade" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/periodo"
        android:id="@+id/txtPeriodo"
        android:layout_below="@+id/txtModalidade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtPeriodo"
        android:layout_alignLeft="@+id/edIdade_confirm"
        android:layout_alignStart="@+id/edIdade_confirm"
        android:orientation="vertical"
        android:id="@+id/rgPeriodo">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodo_manha"
            android:id="@+id/rbManha"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodo_tarde"
            android:id="@+id/rbTarde"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodo_noite"
            android:id="@+id/rbNoite"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reservar"
        android:id="@+id/btnReservar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="btnReservarOnClick" />

</RelativeLayout>
